# cnn-rock-paper-scissors

./: .gitignore  README.md  pyproject.toml
legacy/: rock-paper-scissor.ipynb
notebooks/: rock-paper-scissors.ipynb
scripts/: main.py  prepare-dataset.py
