[project]
name = "cnn-rock-paper-scissors"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abdul Fathin Fawwaz", email = "abdulfathinfawwaz@gmail.com"},
]
dependencies = ["ipykernel>=6.29.5", "opencv-python>=4.11.0.86", "numpy>=2.1.3", "matplotlib>=3.10.3", "tensorflow>=2.19.0", "scipy>=1.16.0", "pandas>=2.3.0", "seaborn>=0.13.2", "scikit-learn>=1.7.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
